src/objects/SIGN_Agreement__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>SIGN_Agreement</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Agreement_Type__c</fullName>
        <label>Agreement Type</label>
        <picklist>
            <picklistValues>
                <fullName>Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Implementation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Migration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Map Confirmation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Migration Sign Off</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change Order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partnership/Alliance Agreement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Professional Services Agreement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mutual NDA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unilateral NDA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AutoUpdate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cc__c</fullName>
        <label>Email a Copy to</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipName>R00N30000001RxRdEAK</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DateSentDate__c</fullName>
        <formula>DateSent__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date Sent (Date)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DateSent__c</fullName>
        <label>Date Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DateSignedDate__c</fullName>
        <formula>DateSigned__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date Signed (Date)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DateSigned__c</fullName>
        <label>Date Signed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DateViewedDate__c</fullName>
        <formula>DateViewed__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date Viewed (Date)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DateViewed__c</fullName>
        <label>Date Viewed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DaysUnsigned__c</fullName>
        <formula>NOW() - DateSent__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Unsigned</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DaysUntilSigned__c</fullName>
        <formula>DateSigned__c - DateSent__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Until Signed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Document__c</fullName>
        <formula>IF(AND(LEN(SignedPDF__c) &gt; 0, ISPICKVAL( Status__c , &quot;Signed&quot;)), HYPERLINK( SignedPDF__c ,   IMAGE(&quot;https://www.echosign.com/images/salesforce-pdf-icon.gif&quot;, &quot;PDF&quot;) &amp; &quot; &quot; &amp; Name  &amp; &quot; - signed.pdf&quot;), &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Document</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ErrorMessage__c</fullName>
        <label>Error Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastEventId__c</fullName>
        <label>LastEventId</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <description>Optional message to recipient.</description>
        <label>Message</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>R00N30000001RxReEAK</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PasswordProtectPDF__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Password required to view PDF</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PasswordProtectSign__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Password required to sign</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Percent_Signed__c</fullName>
        <formula>IF(ISPICKVAL( Status__c , &quot;Signed&quot;),100,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Percent Signed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Recipient__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Recipient</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>R00N30000001RxRcEAK</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Result__c</fullName>
        <formula>IF( AND(LEN(ErrorMessage__c) &gt; 0,  ISPICKVAL( Status__c , &quot;Draft&quot;)), IMAGE(&quot;https://www.echosign.com/images/salesforce-error.gif&quot;, &quot;Error&quot;) &amp; &quot; &quot; &amp; ErrorMessage__c, IF(AND(LEN(SignedPDF__c) &gt; 0,  ISPICKVAL( Status__c , &quot;Signed&quot;)), HYPERLINK( SignedPDF__c ,  IMAGE(&quot;https://www.echosign.com/images/salesforce-pdf-icon.gif&quot;, &quot;PDF&quot;) &amp; &quot; &quot; &amp; Name  &amp; &quot; - signed.pdf&quot;), &quot;&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Result</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SenderSigns__c</fullName>
        <defaultValue>false</defaultValue>
        <label>I also need to sign this document</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SignatureOrder__c</fullName>
        <label>Signature Order</label>
        <picklist>
            <controllingField>SenderSigns__c</controllingField>
            <picklistValues>
                <fullName>Recipient signs, then I sign</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>I sign, then the Recipient signs</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SignatureType__c</fullName>
        <label>Signature Type</label>
        <picklist>
            <picklistValues>
                <fullName>Written Signature</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>e-Signature</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SignedPDF__c</fullName>
        <label>Signed PDF</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StatusVisible__c</fullName>
        <formula>IF(ISPICKVAL( Status__c , &quot;Draft&quot;), HYPERLINK(&quot;/servlet/servlet.Integration?lid=00b30000000sJ2t&amp;eid=&quot; &amp; Id, IMAGE(&quot;https://www.echosign.com/images/salesforce-send.gif&quot;, &quot;Send&quot;)), IF(ISPICKVAL( Status__c , &quot;Out for Signature&quot;),   IF( AutoUpdate__c , &quot;Out for Signature&quot;, HYPERLINK(&quot;/servlet/servlet.Integration?lid=00b30000000sJ2u&amp;eid=&quot; &amp; Id, IMAGE(&quot;https://www.echosign.com/images/salesforce-out-for-signature-update.gif&quot;, &quot;Out for Signature&quot;))),  IF(ISPICKVAL( Status__c , &quot;Signed&quot;), &quot;Signed&quot; , IF(ISPICKVAL( Status__c , &quot;Cancelled / Declined&quot;), &quot;Cancelled / Declined&quot;, &quot;&quot;) ) ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Agreement Status</label>
        <picklist>
            <picklistValues>
                <fullName>Draft</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Out for Signature</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Signed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>AgreementOld</label>
    <nameField>
        <label>Agreement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AgreementsOld</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Fill_Out_Opportunity</fullName>
        <active>false</active>
        <errorConditionFormula>NOT(
OR( ISPICKVAL(Agreement_Type__c, &quot;Mutual NDA&quot;), 
ISPICKVAL(Agreement_Type__c, &quot;Unilateral NDA&quot;), 
ISPICKVAL(Agreement_Type__c,&quot;Partnership/Alliance Agreement&quot;),  
ISPICKVAL(Agreement_Type__c,&quot;Professional Services Agreement&quot;)))</errorConditionFormula>
        <errorMessage>You must populate an opportunity for this agreement type.</errorMessage>
    </validationRules>
</CustomObject>